--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,122 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+body {
+  background-color: #111;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.row {
+  margin:auto 20px ;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.row__posters {
+  display: flex;
+  gap:20px;
+  padding: 20px;
+  overflow-y: hidden;
+  overflow-x: scroll;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+.row__posters::-webkit-scrollbar{
+  display: none;
+}
+
+.poster{
+  max-height: 200px;
+  width: 100%;
+  object-fit: contain;
+  transition: transform 450ms;
+}
+
+.poster--large {
+  max-height: 250px;
+}
+.poster--large:hover{
+  transform: scale(1.09);
+}
+
+.poster:hover{
+  transform: scale(1.08);
+}
+
+.banner {
+  height: 448px;
+  object-fit: contain;;
+}
+
+.banner__content{
+  margin-left: 30px;
+  padding-top: 148px;
+  height: 190px;
+}
+
+.banner__title{
+  font-size: 3rem;
+  font-weight: 800;
+  padding-bottom: 0.3rem;
+}
+
+.banner__description {
+  width: 45rem;
+  line-height: 1.3;
+  padding-top: 1rem;
+  font-size: 0.8rem;
+  max-width: 360px;
+}
+
+.banner__btn {
+  cursor: pointer;
+  color: #fff;
+  outline: none;
+  border: none;
+  font-weight: 700;
+  border-radius: 0.2vw;
+  padding: 0.5rem 2rem;
+  margin-right: 1rem;
+  background-color: rgba(51, 51, 51, 0.5);
+}
+
+.banner__btn:hover{
+  color: #000;
+  background-color: #e6e6e6;
+  transition: all 0.2s;
+}
+
+.banner--fade {
+  height: 7.4rem;
+  background-image: linear-gradient(
+    180deg,
+    transparent,
+    rgba(37,37,37, .61),
+    #111
+  );
+}
+
+.nav{
+  position: fixed;
+  top:0;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  z-index: 1;
+}
+
+.nav__black {
+  background-color: #000;
+}
+
+.nav__logo{
+  left:0;
+  margin-left: 30px;
+  height: 30px;
+  padding: 20px;
+}
+
+.nav__user{
+  right:0;
+  height: 30px;
+  margin-right: 30px;
+  padding: 20px;
 }
